--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>goit-react-hw-03-image-finder</title>
+    <title>goit-react-hw-03-image-finder"</title>
   </head>
-
   <body>
     <div id="root"></div>
+    <div id="root-modal"></div>
   </body>
 </html>
